--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">DynamicJSONForm</string>
     <string name="done">Done</string>
+    <string name="update">Update</string>
     <string name="add">Add</string>
     <string name="json_input_error">Error occured! Please check the json input data</string>
     <string name="json_data_not_found">JSON data not found</string>
